# dazhbog

./: .gitignore  .prettierignore  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  WORKSPACE
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/designs/: TreeAndIndice.md
scripts/: pre-commit  setup.sh
src/: lib.rs
src/tree/: mod.rs
src/tree/node/: mod.rs  partition_node.rs
tools/: clippy.sh  prettier.sh  rust_tests.sh  rustfmt.sh
